fix font size on small devices

--- a/src/styles/smaller.css
+++ b/src/styles/smaller.css
@@ -83,5 +83,6 @@
   }
   header > ul > li {
     margin: 8px 0 0 0;
+    font-size: 0.8em;
   }
 }
